// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInfo /> should display error if contrat cdd 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
  border-color: #cbd6e0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
>
  Vous ne pouvez pas obtenir d’indemnité de licenciement si vous êtes en CDD ou en contrat de travail temporaire. Sous certaines conditions, vous avez le droit à une 
  <a
    el="noopener noreferrer"
    href="/fiche-service-public/qui-peut-toucher-la-prime-de-precarite-a-la-fin-dun-contrat-de-travail"
    target="_blank"
  >
    prime de précarité
  </a>
</div>
`;

exports[`<StepInfo /> should display error if fauteGrave 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
  border-color: #cbd6e0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
>
  L’indemnité légale de licenciement n’est pas dûe en cas de faute grave.
  <br />
  Lorsqu’il est invoqué, le motif de faute grave doit apparaître précisément dans le courrier. Reportez vous à la lettre de notification de licenciement.
</div>
`;

exports[`<StepInfo /> should render 1`] = `
.c2 {
  padding: 0;
  font-size: 1.15rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1.25rem;
}

.c0 {
  font-size: 1.25rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

<div>
  <p
    class="c0"
  >
    Quel est votre type de contrat ?
  </p>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        name="contrat"
        type="radio"
        value="cdd"
      />
      <span>
        Contrat à durée determiné (CDD) ou contrat d’intérim
      </span>
    </label>
    <label
      class="c2"
    >
      <input
        name="contrat"
        type="radio"
        value="cdi"
      />
      <span>
        Contrat à durée indeterminé (CDI)
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Êtes-vous licencié(e) pour faute grave ou lourde ?
  </p>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        name="fauteGrave"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c2"
    >
      <input
        name="fauteGrave"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Êtes-vous licencié(e) pour inaptitude suite à accident du travail ou maladie professionnelle reconnue ?
  </p>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        name="inaptitude"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c2"
    >
      <input
        name="inaptitude"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;
